--- a/contato.html
+++ b/contato.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -28,7 +29,7 @@
         <input type="text" id="nome">
         <br>
         <br>
-        <label for="nome">Conta aí</label> <br>
+        <label for="nome">Fala comigo:</label> <br>
         <textarea name="" id="" cols="30" rows="10"></textarea>
         <br>
         <br>
