--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu portfólio</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=KoHo:200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic" rel="stylesheet" />
+
+
+
 </head>
 
-<body>
+<body class="body">
+
     <ul id="menu">
         <li>
             <a href="index.html">Home</a>
@@ -19,53 +24,44 @@
         </li>
     </ul>
 
-
-    <h1 class="center">Hello World! </h1>
+    <h1 class="center h1">Hello World! </h1>
     <div class="container">
-        <div class="pd-30">
-            
-
-           <p class="justify"> Eu me chamo Lizandra, mas podem me chamar de Liz, ok?
-            Atualmente, faço parte da turma 20 no bootcamp da Generation Brasil. A Generation é uma ONG internacional
-            que tem por objetivo capacitar centenas de jovens em TI. Ao término desse curso, você poderá me chamar de
-            Desenvolvedora Full Stack Java Jr. Ou seja, eu entregarei com muita dedicação o back-end e o front-end de
-            uma aplicação web.
-            Tem sido uma experiência incrível. Definitivamente é algo pelo qual agradeço todos os dias. Estou me
-            desenvolvendo
-            não somente em técnica de programação, mas enquanto profissional ética e comprometida.
-            Nessa semana acabamos de entrar no último bloco: estamos na parte de fundamentos web.
-            Começamos criando nossas primeiras páginas usando a linguagem de marcação HTML e em seguida incluiremos CSS
-            e JavaScript.
-            Mal vejo a hora de tudo isso tomar forma.
-            Quem pensa em começar na área de tecnologia, um conselho: comece agora, há muito a ser feito e tudo a ser
-            conquistado.
-            </p>
-        </div>
         <div>
             <img class="br-10 wh-700 pd-30" src="assets/img/photo_workharder.jpg" alt="Foto com letreiro em neon escrito 'Work Harder'">
 
         </div>
-</div>
-    <div class="cont-video">
+        <div class="pd-30">
 
-    <h2>Estar-Perceber-Criar:</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/c1FKaSxa-xE"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+
+            <p class="justify"> Eu me chamo Lizandra, mas podem me chamar de Liz, ok? Atualmente, faço parte da turma 20 no bootcamp da Generation Brasil. A Generation é uma ONG internacional que tem por objetivo capacitar centenas de jovens em TI. Ao término desse curso,
+                você poderá me chamar de Desenvolvedora Full Stack Java Jr. Ou seja, eu entregarei com muita dedicação o back-end e o front-end de uma aplicação web. Tem sido uma experiência incrível. Definitivamente é algo pelo qual agradeço todos os
+                dias. Estou me desenvolvendo não somente em técnica de programação, mas enquanto profissional ética e comprometida. Nessa semana acabamos de entrar no último bloco: estamos na parte de fundamentos web. Começamos criando nossas primeiras
+                páginas usando a linguagem de marcação HTML e em seguida incluiremos CSS e JavaScript. Mal vejo a hora de tudo isso tomar forma. Quem pensa em começar na área de tecnologia, um conselho: comece agora, há muito a ser feito e tudo a ser
+                conquistado.
+            </p>
+        </div>
+        <div>
+            <img class="tex-1 wh-500 br-10 pd-15" src="assets/img/textura-neon.jpg" alt="luzes em neon">
+        </div>
+
     </div>
-    
+    <div class="cont-video">
+        <h2>Estar-Perceber-Criar:</h2>
+        <iframe width="560" height="315" class="br-10" src=" https://www.youtube.com/embed/c1FKaSxa-xE " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
+    </div>
+    <hr>
     <footer>
-        <div class="container">
-            <a href="https://www.linkedin.com/in/lizandra-santos-032b5a20b/" target="_blank">
-            <img class="tm-social pd-30" src="assets/img/linkedin.png" alt="Logo do Linkedin"> </a>
-            <a href="https://github.com/lizsts" target="_blank">
-            <img class="tm-social pd-30" src="assets/img/github.png" alt="Logo do GitHub"> </a>
-    </div> 
- 
-            <p class="center">Todos os direitos reservados - Liz St &copy </p>
+        <div class=" container ">
+            <div class="neon ">
+                <a href="https://www.linkedin.com/in/lizandra-santos-032b5a20b/ " target="_blank ">
+                    <img class="tm-social pd-15 " src="assets/img/linkedin.png " alt="Logo do Linkedin "> </a>
+                <a href="https://github.com/lizsts " target="_blank ">
+                    <img class="tm-social pd-15 " src="assets/img/github.png " alt="Logo do GitHub "> </a>
+            </div>
+        </div>
+        <p class="center cor-f ">Todos os direitos reservados - Liz St &copy </p>
 
-        </footer>
+    </footer>
 </body>
 
 </html>
