implementando js em formulario e mapa

--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
     </ul>
 
     <h1 class="center h1">Hello World! </h1>
+
     <div class="container">
         <div>
-            <img class="br-10 wh-700 pd-30" src="assets/img/photo_workharder.jpg" alt="Foto com letreiro em neon escrito 'Work Harder'">
+            <img class="br-10 wh-700 pd-15" src="assets/img/photo_workharder.jpg" alt="Foto com letreiro em neon escrito 'Work Harder'">
+            <img class="br-10 wh-700 pd-15" src="assets/img/nothingImpossible.jpg" alt="Foto com letreiro em neon escrito 'Nothing is impossible'">
 
         </div>
-        <div class="pd-30">
+        <div>
 
 
-            <p class="justify"> Eu me chamo Lizandra, mas podem me chamar de Liz, ok? Atualmente, faço parte da turma 20 no bootcamp da Generation Brasil. A Generation é uma ONG internacional que tem por objetivo capacitar centenas de jovens em TI. Ao término desse curso,
+            <p class="justify pd-15"> Eu me chamo Lizandra, mas podem me chamar de Liz, ok? Atualmente, faço parte da turma 20 no bootcamp da Generation Brasil. A Generation é uma ONG internacional que tem por objetivo capacitar centenas de jovens em TI. Ao término desse curso,
                 você poderá me chamar de Desenvolvedora Full Stack Java Jr. Ou seja, eu entregarei com muita dedicação o back-end e o front-end de uma aplicação web. Tem sido uma experiência incrível. Definitivamente é algo pelo qual agradeço todos os
                 dias. Estou me desenvolvendo não somente em técnica de programação, mas enquanto profissional ética e comprometida. Nessa semana acabamos de entrar no último bloco: estamos na parte de fundamentos web. Começamos criando nossas primeiras
                 páginas usando a linguagem de marcação HTML e em seguida incluiremos CSS e JavaScript. Mal vejo a hora de tudo isso tomar forma. Quem pensa em começar na área de tecnologia, um conselho: comece agora, há muito a ser feito e tudo a ser
@@ -47,11 +49,11 @@
     </div>
     <div class="cont-video">
         <h2>Estar-Perceber-Criar:</h2>
-        <iframe width="560" height="315" class="br-10" src=" https://www.youtube.com/embed/c1FKaSxa-xE " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
+        <iframe width=" 560 " height="315 " class="br-10 " src=" https://www.youtube.com/embed/c1FKaSxa-xE " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
     </div>
     <hr>
     <footer>
-        <div class=" container ">
+        <div class="container ">
             <div class="neon ">
                 <a href="https://www.linkedin.com/in/lizandra-santos-032b5a20b/ " target="_blank ">
                     <img class="tm-social pd-15 " src="assets/img/linkedin.png " alt="Logo do Linkedin "> </a>
