--- a/contato.html
+++ b/contato.html
@@ -24,43 +24,51 @@
     </ul>
 
 
-    <h1 class="center h1">Quer saber mais?</h1>
-    <form class="justify">
-        <label for="nome">Seu nome: </label> <br>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="nome">Seu e-mail: </label> <br>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="nome">Fala comigo:</label> <br>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <br>
-        <br>
-        <button>Enviar</button>
-    </form>
-    <h2 class="center">Visite:</h2>
-    <p class="center">Av. Pedro Álvares Cabral, São Paulo-SP<br> 04094-050
-    </p>
-    <div class="container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.471673083763!2d-46.659827648698425!3d-23.587411268366246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f1069d11d1%3A0xcb936109af9ce541!2sParque%20Ibirapuera!5e0!3m2!1spt-BR!2sbr!4v1621443107356!5m2!1spt-BR!2sbr"
-            width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe> </div>
+    <h1 class="center h1-cont">Quer saber mais?</h1>
+    <div class="container pd-30">
+        <div>
+            <form class="justify pd-30">
+                <label for="nome">Seu nome: </label> <br>
+                <input type="text" id="nome" onkeyup="validaNome()">
+                <div id='txtNome'></div>
+                <br>
+                <label for="email">Seu e-mail: </label> <br>
+                <input type="email" id="email" onkeyup="validaEmail()">
+                <div id='txtEmail'> </div>
+                <br>
+                <label for="msg">Fala comigo:</label> <br>
+                <textarea name="mensagem" id="msg" cols="50 " rows="10" onkeyup="validaMsg()"></textarea>
+                <div id="txtMsg"> </div>
+                <br>
+                <button onclick="enviar()">Enviar</button>
+            </form>
+
+        </div>
+        <div class=ml-50 ">
+
+                <h2 class="center ">Visite:</h2>
+                <p class="center cor-f ">Av. Pedro Álvares Cabral, São Paulo-SP<br> 04094-050
+                </p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.471673083763!2d-46.659827648698425!3d-23.587411268366246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f1069d11d1%3A0xcb936109af9ce541!2sParque%20Ibirapuera!5e0!3m2!1spt-BR!2sbr!4v1621443107356!5m2!1spt-BR!2sbr "
+                    width="400 " height="250 " style="border:0; " allowfullscreen=" " onmousemove="mapaZoom() " onmousemove="mapaZoom() " onmouseout="mapaNormal() " id='mapa'>
+            </iframe>
+            </iframe>
+        </div>
+    </div>
 
     <hr>
     <footer>
-        <div class="container">
-            <a href="https://www.linkedin.com/in/lizandra-santos-032b5a20b/" target="_blank">
-                <img class="tm-social pd-15" src="assets/img/linkedin.png" alt="Logo do Linkedin"> </a>
-            <a href="https://github.com/lizsts" target="_blank">
-                <img class="tm-social pd-15" src="assets/img/github.png" alt="Logo do GitHub"> </a>
+        <div class="container ">
+            <a href="https://www.linkedin.com/in/lizandra-santos-032b5a20b/ " target="_blank ">
+                <img class="tm-social pd-15 " src="assets/img/linkedin.png " alt="Logo do Linkedin "> </a>
+            <a href="https://github.com/lizsts " target="_blank ">
+                <img class="tm-social pd-15 " src="assets/img/github.png " alt="Logo do GitHub "> </a>
         </div>
 
-        <p class="center cor-f">Todos os direitos reservados - Liz St &copy </p>
+        <p class="center cor-f ">Todos os direitos reservados - Liz St &copy </p>
 
     </footer>
-
+    <script src="assets/js/script.js ">
+    </script>
 </body>
-
-</html>
+< /html>
