landing page em processo

--- a/bootstrap/siteCompleto.html
+++ b/bootstrap/siteCompleto.html
@@ -13,7 +13,7 @@
 <body>
     <!--Menu-->
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <a class="navbar-brand" href="#">6 coisas</a>
+        <a class="navbar-brand" href="#">Psicologia do Afeto</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,6 +22,9 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> <span class="sr-only">(página atual)</span></a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -52,14 +55,18 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
+
             <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/img/winter.jpg" alt="Primeiro Slide - chuva">
+                <img class="d-block w-100" src="assets/img/casal-idoso.png" alt="Primeiro Slide - ilustração mulher-flores">
+                <div class="carousel-caption">
+                    <h5>Autocuidado e saúde mental: boas práticas</h5>
+                </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/img/coffee.jpg" alt="Segundo Slide - livro">
+                <img class="d-block w-100" src="assets/img/menina-balanco.png" alt="Segundo Slide - livro">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/img/books.jpg" alt="Terceiro Slide - café">
+                <img class="d-block w-100" src="assets/img/menina-ilustracaoflores.png" alt="Terceiro Slide - café">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
